
[package]
name = "disasm"
version = "0.1.0"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]

[dependencies]
addr2line = "0.7.0"
capstone = "0.6.0"
failure = "0.1.1"
memmap = "0.6.1"
moria = { git = "https://github.com/gimli-rs/moria/", rev = "ed6d27570126e0b2b90db54bc45b5514e5918bdf"}
object = "0.9.0"
gimli = "0.16.0"
syntect = "2.0.0"
atty = "0.2.6"
structopt = "0.2.5"
