
[package]
name = "disasm"
version = "0.2.0"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
edition = "2018"

[dependencies]
addr2line = "0.16.0"
failure = "0.1.1"
fallible-iterator = "0.2.0"
memmap = "0.7.0"
locate-dwarf = { git = "https://github.com/gimli-rs/locate-dwarf", rev = "9824c528a71d3563564e89811b9e189f4dec4c3e" }
object = "0.26.0"
gimli = "0.25.0"
syntect = "3.3.0"
atty = "0.2.6"
num-traits = "0.2.10"
structopt = "0.2.5"
once_cell = "1.3.1"
thiserror = "1.0.9"
yaxpeax-arch = "0.2.4"
yaxpeax-arm = { version = "0.1.1" }
yaxpeax-x86 = { version = "1.0.4" }


[target.'cfg(unix)'.dependencies]
pager = "0.16.0"
